Added EntitySettingsWindow added missed include in MessageBox.hpp create getComponentRegistry func in Render System added click event in SceneHierarchyWindow moved Template funcs from cpp to hpp file in TransformComponent class

--- a/editor/src/gui/editors_windows/CMakeLists.txt
+++ b/editor/src/gui/editors_windows/CMakeLists.txt
@@ -24,6 +24,8 @@ target_sources(${EDITOR_NAME} PRIVATE
         FramebufferWindow.cpp
         TilesetEditor.hpp
         TilesetEditor.cpp
+        EntitySettingsWindow.cpp
+        EntitySettingsWindow.hpp
         )
 
 add_subdirectory(native_file_dialog)
