--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ endif (ENABLE_SANITIZERS)
 
 set(PHMAP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/parallel-hashmap)
 set(GLM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/glm)
+set(SPDLOG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/spdlog/include)
 set(SDL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/SDL/include)
 set(JSON_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/json/include)
 set(CONTEXT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/boost_context/include)
@@ -67,6 +68,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/glm)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/SDL)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/json)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/boost_context)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/spdlog)
 
 if (ENABLE_OPENGL_SUPPORT)
     if (NOT ${BUILD_FOR_ANDROID})
